Code cleanup. Beginning the long road to ZERO warnings.