@@ -132,14 +132,16 @@ public class MaplePlayerNPCPositioner {
 
     private static Point reorganizePlayerNpcs(MapleMap map, int newStep, List<MapleMapObject> mmoList) {
         if (!mmoList.isEmpty()) {
-            if (YamlConfig.config.server.USE_DEBUG) System.out.println("Reorganizing pnpc map, step " + newStep);
+            if (YamlConfig.config.server.USE_DEBUG) {
+                System.out.println("Reorganizing pnpc map, step " + newStep);
+            }
 
             List<MaplePlayerNPC> playerNpcs = new ArrayList<>(mmoList.size());
             for (MapleMapObject mmo : mmoList) {
                 playerNpcs.add((MaplePlayerNPC) mmo);
             }
 
-            Collections.sort(playerNpcs, new Comparator<MaplePlayerNPC>() {
+            playerNpcs.sort(new Comparator<>() {
                 @Override
                 public int compare(MaplePlayerNPC p1, MaplePlayerNPC p2) {
                     return p1.getScriptId() - p2.getScriptId(); // scriptid as playernpc history
@@ -175,7 +177,7 @@ public class MaplePlayerNPCPositioner {
     }
 
     private static Point getNextPlayerNpcPosition(MapleMap map, int initStep) {   // automated playernpc position thanks to Ronan
-        List<MapleMapObject> mmoList = map.getMapObjectsInRange(new Point(0, 0), Double.POSITIVE_INFINITY, Arrays.asList(MapleMapObjectType.PLAYER_NPC));
+        List<MapleMapObject> mmoList = map.getMapObjectsInRange(new Point(0, 0), Double.POSITIVE_INFINITY, List.of(MapleMapObjectType.PLAYER_NPC));
         List<Point> otherPlayerNpcs = new LinkedList<>();
         for (MapleMapObject mmo : mmoList) {
             otherPlayerNpcs.add(mmo.getPosition());
